website/versioned_docs/version-20.0.0/rpc_nodes_integration_test.md
---
title: RPC tests
author: Roxane Letourneau
---

## Steps to run the tests

1. The RPC nodes' integration tests are disabled by default.
Remove `./rpc-nodes.spec.ts` from `"testPathIgnorePatterns"` in the package.json.

 **parisnet**: `npm run test:parisnet rpc-nodes.spec.ts`

**When all endpoints are accessible for a node, you will obtain:**

```
  Test calling all methods from RPC node: http://parisnet.i.ecadinfra.com:8732/
    ✓ Verify that rpcClient.getBlockHash returns the head block hash (37 ms)
    ✓ Verify that rpcClient.getLiveBlocks returns the ancestors of the head block (53 ms)
    ✓ Verify that rpcClient.getBalance for knownBaker returns the spendable balance excluding frozen bonds (32 ms)
    ✓ Verify that rpcClient.getFullBalance for knownBaker returns the spendable balance excluding frozen bonds (37 ms)
    ✓ Verify that rpcClient.getStakedBalance for knownBaker returns the spendable balance excluding frozen bonds (34 ms)
    ✓ Verify that rpcClient.getUnstakedFinalizableBalance for knownBaker returns the spendable balance excluding frozen bonds (37 ms)
    ✓ Verify that rpcClient.getUnstakedFrozenBalance for knownBaker returns the spendable balance excluding frozen bonds (33 ms)
    ✓ Verify that rpcClient.getUnstakeRequests for knownBaker returns the spendable balance excluding frozen bonds (29 ms)
    ✓ Verify that rpcClient.getStorage for knownContract returns the data of a contract (35 ms)
    ✓ Verify that rpcClient.getScript for know contract returns the code and data of a contract (33 ms)
    ✓ Verify that rpcClient.getNormalizedScript for known contract returns the script of the contract and normalize it using the requested unparsing mode (30 ms)
    ✓ Verify that rpcClient.getContract returns the complete status of a contract (30 ms)
    ✓ Verify that rpcClient.getManagerKey for known baker returns the manager key of the contract (30 ms)
    ✓ Verify that rpcClient.getDelegate for known baker returns the delegate of the contract (30 ms)
    ✓ Verify that rpcClient.getBigMapExpr for encoded expression returns the value associated with a key in a big map (151 ms)
    ✓ Verify that rpcClient.getAllDelegates returns all delegates from RPC (132 ms)
    ✓ Verify that rpcClient.getDelegates for known baker returns information about a delegate from RPC (32 ms)
    ✓ Verify that rpc.getVotingInfo for known baker returns voting information about a delegate from RPC (30 ms)
    ✓ Verify that rpcClient.getConstants returns all constants from RPC (33 ms)
    ✓ Verify that rpcClient.getBlock returns all the information about a block (46 ms)
    ✓ Verify that rpcClient.getBlockHeader returns whole block header (34 ms)
    ✓ Verify that rpcClient.getBlockMetadata returns all metadata associated to the block (33 ms)
    ✓ Verify that rpcClient.getBakingRights retrieves the list of delegates allowed to bake a block (38 ms)
    ✓ Verify that rpcClient.getAttestationRights retrieves the list of delegates allowed to attest a block (41 ms)
    ✓ Verify that rpcClient.getBallotList returns ballots casted so far during a voting period (30 ms)
    ✓ Verify that rpcClient.getBallots returns sum of ballots casted so far during a voting period (29 ms)
    ✓ Verify that rpcClient.getCurrentPeriod returns current period kind (30 ms)
    ✓ Verify that rpcClient.getCurrentProposal returns current proposal under evaluation (32 ms)
    ✓ Verify that rpcClient.getCurrentQuorum returns current expected quorum (34 ms)
    ✓ Verify that rpcClient.getVotesListings returns list of delegates with their voting weight, in number of rolls (32 ms)
    ✓ Verify that rpcClient.getProposals returns list of proposals with number of supporters (34 ms)
    ✓ Verify that rpcClient.forgeOperations forges an operation and returns the unsigned bytes (38 ms)
    ✓ Verify that rpcClient.injectOperation injects an operation in node and broadcast it (28 ms)
    ✓ Verify that rpcClient.preapplyOperations simulates the validation of an operation (104 ms)
    ✓ Verify that rpcClient.getEntrypoints for known contract returns list of entrypoints of the contract (28 ms)
    ✓ Verify that rpcClient.getChainId returns chain ID (44 ms)
    ✓ Verify that rpcClient.runOperation runs an operation without signature checks (33 ms)
    ✓ Verify that rpcClient.simulateOperation simulates an operation without signature checks (35 ms)
    ✓ Verify that rpcClient.runView executes tzip4 views (64 ms)
    ✓ Verify that rpcClient.runScriptView executes michelson view (60 ms)
    ✓ Verify that rpcClient.getSuccessorPeriod will get the voting period of next block (29 ms)
    ✓ Verify that rpcClient.getSaplingDiffById will access the value associated with a sapling state ID (64 ms)
    ✓ Verify that rpcClient.getSaplingDiffByContract will access the value associated with a sapling state (33 ms)
    ✓ Verify that rpcClient.getProtocols will list past and present Tezos protocols (32 ms)
    ✓ Verify that rpcClient.getStorageUsedSpace will retrieve the used space of a contract storage (30 ms)
    ✓ Verify that rpcClient.getStoragePaidSpace will retrieve the paid space of a contract storage (29 ms)
    ✓ Verify that rpcClient.ticketBalance will retrieve the specified ticket owned by the given contract (28 ms)
    ✓ Verify that rpcClient.allTicketBalances will retrieve all tickets owned by the given contract (39 ms)
    ✓ Verify that rpcClient.getAdaptiveIssuanceLaunchCycle will retrieve launch cycle 6 for http://parisnet.i.ecadinfra.com:8732/ (29 ms)
    ✓ Verify that rpcClient.getPendingOperations v1 will retrieve the pending operations in mempool with property applied (397 ms)
    ✓ Verify that rpcClient.getPendingOperations v2 will retrieve the pending operations in mempool with property validated (470 ms)
    ○ skipped Verify that rpcClient.getAdaptiveIssuanceLaunchCycle will retrieve launch cycle null for http://parisnet.i.ecadinfra.com:8732/
```

**Otherwise, you will see which endpoints do not work for a specific node:**

```
  Test calling all methods from RPC node: http://localhost:20000
    ✓ Verify that rpcClient.getBlockHash returns the head block hash (13 ms)
    ✓ Verify that rpcClient.getLiveBlocks returns the ancestors of the head block (18 ms)
    ✓ Verify that rpcClient.getBalance for knownBaker returns the spendable balance excluding frozen bonds (13 ms)
    ✓ Verify that rpcClient.getFullBalance for knownBaker returns the full balance (8 ms)
    ✓ Verify that rpcClient.getStakedBalance for knownBaker returns the staked balance (10 ms)
    ✓ Verify that rpcClient.getUnstakedFinalizableBalance for knownBaker returns the unstaked finalizable balance (11 ms)
    ✓ Verify that rpcClient.getUnstakedFrozenBalance for knownBaker returns the unstaked frozen balance (7 ms)
    ✓ Verify that rpcClient.getUnstakeRequests for knownBaker returns the unstaked requests (8 ms)
    ✓ Verify that rpcClient.getStorage for knownContract returns the data of a contract (10 ms)
    ✓ Verify that rpcClient.getScript for know contract returns the code and data of a contract (11 ms)
    ✓ Verify that rpcClient.getNormalizedScript for known contract returns the script of the contract and normalize it using the requested unparsing mode (15 ms)
    ✓ Verify that rpcClient.getContract returns the complete status of a contract (12 ms)
    ✓ Verify that rpcClient.getManagerKey for known baker returns the manager key of the contract (11 ms)
    ✓ Verify that rpcClient.getDelegate for known baker returns the delegate of the contract (8 ms)
    ✓ Verify that rpcClient.getBigMapExpr for encoded expression returns the value associated with a key in a big map (93 ms)
    ✓ Verify that rpcClient.getAllDelegates returns all delegates from RPC (132 ms)
    ✓ Verify that rpcClient.getDelegates for known baker returns information about a delegate from RPC (10 ms)
    ✓ Verify that rpc.getVotingInfo for known baker returns voting information about a delegate from RPC (7 ms)
    ✓ Verify that rpcClient.getConstants returns all constants from RPC (10 ms)
    ✓ Verify that rpcClient.getBlock returns all the information about a block (10 ms)
    ✓ Verify that rpcClient.getBlockHeader returns whole block header (9 ms)
    ✓ Verify that rpcClient.getBlockMetadata returns all metadata associated to the block (6 ms)
    ✓ Verify that rpcClient.getBakingRights retrieves the list of delegates allowed to bake a block (12 ms)
    ✓ Verify that rpcClient.getAttestationRights retrieves the list of delegates allowed to attest a block (11 ms)
    ✓ Verify that rpcClient.getBallotList returns ballots casted so far during a voting period (6 ms)
    ✓ Verify that rpcClient.getBallots returns sum of ballots casted so far during a voting period (5 ms)
    ✓ Verify that rpcClient.getCurrentPeriod returns current period kind (6 ms)
    ✓ Verify that rpcClient.getCurrentProposal returns current proposal under evaluation (7 ms)
    ✓ Verify that rpcClient.getCurrentQuorum returns current expected quorum (8 ms)
    ✓ Verify that rpcClient.getVotesListings returns list of delegates with their voting weight, in number of rolls (7 ms)
    ✓ Verify that rpcClient.getProposals returns list of proposals with number of supporters (6 ms)
    ✓ Verify that rpcClient.forgeOperations forges an operation and returns the unsigned bytes (13 ms)
    ✓ Verify that rpcClient.injectOperation injects an operation in node and broadcast it (7 ms)
    ✓ Verify that rpcClient.preapplyOperations simulates the validation of an operation (29 ms)
    ✓ Verify that rpcClient.getEntrypoints for known contract returns list of entrypoints of the contract (21 ms)
    ✓ Verify that rpcClient.getChainId returns chain ID (6 ms)
    ✓ Verify that rpcClient.runOperation runs an operation without signature checks (13 ms)
    ✓ Verify that rpcClient.simulateOperation simulates an operation without signature checks (13 ms)
    ✓ Verify that rpcClient.runView executes tzip4 views (27 ms)
    ✓ Verify that rpcClient.runScriptView executes michelson view (22 ms)
    ✓ Verify that rpcClient.getSuccessorPeriod will get the voting period of next block (7 ms)
    ✓ Verify that rpcClient.getSaplingDiffById will access the value associated with a sapling state ID (17 ms)
    ✓ Verify that rpcClient.getSaplingDiffByContract will access the value associated with a sapling state (9 ms)
    ✓ Verify that rpcClient.getProtocols will list past and present Tezos protocols (6 ms)
    ✓ Verify that rpcClient.getStorageUsedSpace will retrieve the used space of a contract storage (8 ms)
    ✓ Verify that rpcClient.getStoragePaidSpace will retrieve the paid space of a contract storage (7 ms)
    ✓ Verify that rpcClient.ticketBalance will retrieve the specified ticket owned by the given contract (7 ms)
    ✓ Verify that rpcClient.allTicketBalances will retrieve all tickets owned by the given contract (10 ms)
    ✓ Verify that rpcClient.getAdaptiveIssuanceLaunchCycle will retrieve launch cycle null for http://localhost:20000 (6 ms)
    ✓ Verify that rpcClient.getPendingOperations v1 will retrieve the pending operations in mempool with property applied (313 ms)
    ✓ Verify that rpcClient.getPendingOperations v2 will retrieve the pending operations in mempool with property validated (323 ms)
    ○ skipped Verify that rpcClient.getAdaptiveIssuanceLaunchCycle will retrieve launch cycle 6 for http://localhost:20000
```